sae503/quote/quotes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotes-api-deployment
  namespace: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: quotes-api
  template:
    metadata:
      labels:
        app: quotes-api
    spec:
      containers:
      - name: quotes-api
        image: clementserandour/api_quotes:latest
        ports:
        - containerPort: 5002
        volumeMounts:
        - name: csv-storage
          mountPath: /data
      volumes:
      - name: csv-storage
        persistentVolumeClaim:
          claimName: csv-pvc
