sae503/quote/quotes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quotes-api-service
  namespace: prod
spec:
  selector:
    app: quotes-api
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
  type: ClusterIP
